2007-05-07  Bruno coudoin  <bruno.coudoin@free.fr>

	Included the latest binreloc detection code from autopackage svn.
	Now binreloc detection works again, it follow the user choice
	and is on auto by default.

	* acinclude.m4:
	* configure.in:

2007-05-06  Bruno coudoin  <bruno.coudoin@free.fr>

	* configure.in: fixed a bad test around XLIBADD (by Manfred Tremmel)
	* docs/gcompris2spip.pl: added arabic
	* docs/website/sommaire.html: updated from the website

2007-05-02  Bruno coudoin  <bruno.coudoin@free.fr>

	Integrated the writing tutor activity from Jozef Cerven jcmail80 on gmail / com.

	* Makefile.am:
	* boards/Makefile.am:
	* boards/writing_tutor.xml.in:
	* boards/writing_tutor/anim_pen.txt:
	* boards/writing_tutor_image_match.xml.in:
	* boards/writing_tutor_missing_match.xml.in:
	* boards/writing_tutor_pattern_admin.xml.in:
	* boards/writing_tutor_template_match.xml.in:
	* configure.in:
	* gcompris-edit.desktop.in:
	* macosx/Makefile.am:
	* src/boards/python.c: (pythonboard_init):
	* src/boards/python/DTW/Makefile.am:
	* src/boards/python/DTW/dtw.py:
	* src/boards/python/Makefile.am:
	* src/boards/python/writing_tutor_common.py:
	* src/boards/python/writing_tutor_image_match.py:
	* src/boards/python/writing_tutor_missing_match.py:
	* src/boards/python/writing_tutor_pattern_admin.py:
	* src/boards/python/writing_tutor_template_match.py:
	* src/gcompris/config.c:

	*** RELEASE 8.3.1 ***

2007-04-29  Bruno coudoin  <bruno.coudoin@free.fr>

	* configure.in: release 8.3.1
	* prepare-ChangeLog.pl: svn detection change

	- Created Indian Hindi voices by Anand Kulkarni
	  Credit goes to 'Sarvangin Vikas Sanstha'

	* boards/sounds/hi: created Hindi voices

2007-04-25  Bruno coudoin  <bruno.coudoin@free.fr>

	* Makefile.am: Fixed missing macosx
	* boards/Makefile.am: reverted website mode

	*** RELEASE 8.3 ***

2007-04-24  Bruno coudoin  <bruno.coudoin@free.fr>

	bug#33008 New: Updated Bulgarian (bg) translation